src/test/resources/invalid/noValueReassignment.sbsc
// Parser should fail on value reassignment

a = "bazinga";

a = "bazinga2";